Bug: PRD Reviewer: Lynn Comment: changed the url color for the Share dialog to the darker blue for better contrast. Also fixed the jumping on the OK Cancel button of the dialogs.

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -614,7 +614,7 @@
 
 .shareThisDlg_ExpiresLabel, .shareThisDlg_DefaultExpiresLabel
 {
-	color: #5691A6;
+	color: #135c8f;
 	padding-left: 4px;
 }
 
@@ -701,7 +701,7 @@
 
 .shareThisDlg_RightsLabel
 {
-	color: #5691A6;
+	color: #135c8f;
 	padding-left: 4px;
 }
 
@@ -733,7 +733,7 @@
 
 .shareThisDlg_shareWithTeamsLink
 {
-	color: #5691A6;
+	color: #135c8f;
 	margin-left: 30px;
 }
 
@@ -2775,7 +2775,7 @@ body, table td, select
 
 .teamingDlgBoxFooter .gwt-Button {
 	color:#fff;
- 	font-size: 12px;
+ 	font-size: 11px;
     font-family: Arial, sans-serif !important;
 	background: #949494 none repeat scroll 0 0;
 	margin-right:3px;
@@ -4500,7 +4500,7 @@ td.datePickerMonth {
  */
 .shareSendToWidget_mainLabel
 {
-	color: #5691A6;
+	color: #135c8f;
 	display: inline-block;
 	padding-left: 5px;
 }
